--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="preload" as="fetch" crossorigin="anonymous" href="/_payload.json">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/entry.e45cc662.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/error-404.a1265617.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/vue.f36acd1f.e62cfe00.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/error-500.06fe5cf2.js">
-<script type="module" src="/_nuxt/entry.e45cc662.js" crossorigin></script></head>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/entry.17aaefab.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/error-404.3d2177ca.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/vue.f36acd1f.d616b347.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/error-500.b23cab78.js">
+<script type="module" src="/_nuxt/entry.17aaefab.js" crossorigin></script></head>
 <body ><div id="__nuxt"><div>[
   {
     &quot;_id&quot;: &quot;6553b230acdc1881766db23a&quot;,
     &quot;name&quot;: &quot;bread&quot;,
     &quot;slug&quot;: &quot;&quot;
+  },
+  {
+    &quot;_id&quot;: &quot;65562972eda96d0d79526de6&quot;,
+    &quot;name&quot;: &quot;123123&quot;,
+    &quot;slug&quot;: &quot;123123&quot;
   }
-]</div></div><script type="application/json" id="__NUXT_DATA__" data-ssr="true" data-src="/_payload.json">[{"state":1,"_errors":3,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Reactive",4],{"nphE2B4FrW":5},null,true,"/",1699984799084]</script>
+]</div></div><script type="application/json" id="__NUXT_DATA__" data-ssr="true" data-src="/_payload.json">[{"state":1,"_errors":3,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Reactive",4],{"nphE2B4FrW":5},null,true,"/",1700145690775]</script>
 <script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body>
 </html>
